HttpSample.application/target/classes/META-INF/fabric8/openshift/bwce-sample-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: HttpSample.application
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.tibco.bw
  name: bwce-sample
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: HttpSample.application
    provider: fabric8
    group: com.tibco.bw
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      labels:
        container: bwce-sample
        project: bwce-sample
        app: HttpSample.application
        provider: fabric8
        version: 1.0.0-SNAPSHOT
        group: com.tibco.bw
      name: bwce-sample
      namespace: default
    spec:
      containers:
      - image: localhost:5000/httpsample
        imagePullPolicy: Always
        name: bwce-sample
        ports:
        - containerPort: 8080
          name: http
  triggers:
  - type: ConfigChange
